--- a/Commande_Zalando/requirements.txt
+++ b/Commande_Zalando/requirements.txt
@@ -1,5 +1,13 @@
 beautifulsoup4==4.9.1
+certifi==2020.4.5.1
+chardet==3.0.4
 idna==2.9
+lxml==4.5.1
 random-password-generator==2.1.0
-requests==2.23.0
+requests==2.24.0
+rpa==1.27.1
+six==1.15.0
+soupsieve==2.0.1
+tagui==1.27.1
 urllib3==1.25.9
+user-agent==0.1.9
