--- a/Bot_Zalando_3.0/requirements.txt
+++ b/Bot_Zalando_3.0/requirements.txt
@@ -1,8 +1,14 @@
 beautifulsoup4==4.9.1
-certifi==2020.4.5.1
+brotlipy==0.7.0
+certifi==2020.6.20
+cffi==1.14.0
 chardet==3.0.4
-idna==2.9
+cryptography==2.9.2
+idna==2.10
 lxml==4.5.1
+pycparser==2.20
+pyOpenSSL==19.1.0
+PySocks==1.7.1
 random-password-generator==2.1.0
 requests==2.24.0
 rpa==1.27.1
